--- a/angular/src/eaton-theme.scss
+++ b/angular/src/eaton-theme.scss
@@ -3,8 +3,10 @@
 @import url('~typeface-open-sans/index.css');
 @import url('~typeface-roboto-mono/index.css');
 
-
-@include mat-core();
+$custom-typography: mat-typography-config(
+    $font-family: 'OpenSans'
+)
+@include mat-core($custom-typography);
 
 $app-primary: mat-palette($eaton-blue);
 $app-accent:  mat-palette($eaton-blue, 200);
