readmes, scripts, and some de-eatoning

--- a/nativescript/theme.scss
+++ b/nativescript/theme.scss
@@ -1,5 +1,5 @@
 // Cusotmized Color Variables
-@import 'pxblue-variables';
+@import './src/pxblue-variables';
 
 .fa {
   font-family: "FontAwesome";
