--- a/angular/theme.scss
+++ b/angular/theme.scss
@@ -1,9 +1,9 @@
 @import '~@angular/material/_theming.scss';
-@import '~@pxblue/colors/ui/palette.scss';
+@import '~@pxblue/colors/palette.scss';
 
-$app-primary: mat-palette($eaton-blue);
-$app-accent:  mat-palette($eaton-blue, 200);
-$app-warn: mat-palette($eaton-red, A700);
+$app-primary: mat-palette($pxb-blue);
+$app-accent:  mat-palette($pxb-blue, 200);
+$app-warn: mat-palette($pxb-red, A700);
 $app-theme:   mat-light-theme($app-primary, $app-accent, $app-warn);
 
 @include angular-material-theme($app-theme);
@@ -16,9 +16,9 @@ $app-theme:   mat-light-theme($app-primary, $app-accent, $app-warn);
 }
 
 
-$dark-primary: mat-palette($eaton-black, 700);
-$dark-accent:  mat-palette($eaton-blue, 500);
-$dark-warn: mat-palette($eaton-red, A700);
+$dark-primary: mat-palette($pxb-black, 700);
+$dark-accent:  mat-palette($pxb-blue, 500);
+$dark-warn: mat-palette($pxb-red, A700);
 $dark-theme:   mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
 
 .dark-theme {
@@ -27,9 +27,9 @@ $dark-theme:   mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
 }
 
 
-$red-primary: mat-palette($eaton-red, 500);
-$red-accent: mat-palette($eaton-black, 500);
-$red-warn: mat-palette($eaton-red, A700);
+$red-primary: mat-palette($pxb-red, 500);
+$red-accent: mat-palette($pxb-black, 500);
+$red-warn: mat-palette($pxb-red, A700);
 $red-theme: mat-light-theme($red-primary, $red-accent, $red-warn);
 
 .red-theme{
