--- a/nativescript/theme.scss
+++ b/nativescript/theme.scss
@@ -1,4 +1,12 @@
-// Cusotmized Color Variables
+/**
+Copyright (c) 2018-present, Eaton
+ 
+All rights reserved.
+ 
+This code is licensed under the BSD-3 license found in the LICENSE file in the root directory of this source tree and at https://opensource.org/licenses/BSD-3-Clause.
+**/
+
+// Customized Color Variables
 @import './src/pxblue-variables';
 
 .fa {
