Update instructions for typography

--- a/angular/theme.scss
+++ b/angular/theme.scss
@@ -8,6 +8,9 @@ This code is licensed under the BSD-3 license found in the LICENSE file in the r
 @import '~@angular/material/_theming.scss';
 @import '~@pxblue/colors/palette.scss';
 
+$custom-typography: mat-typography-config($font-family: 'Open Sans, Arial, Helvetica, sans-serif;');
+@include mat-core($custom-typography);
+
 $app-primary: mat-palette($pxb-blue);
 $app-accent:  mat-palette($pxb-blue, 200);
 $app-warn: mat-palette($pxb-red, A700);
