Fixed angular theme issues

--- a/angular/theme.scss
+++ b/angular/theme.scss
@@ -8,54 +8,93 @@ This code is licensed under the BSD-3 license found in the LICENSE file in the r
 
 @import '~@angular/material/_theming.scss';
 @import '~@pxblue/colors/palette.scss';
-$custom-typography: mat-typography-config( $font-family: '"Open Sans", Arial, Helvetica, sans-serif;', $display-4 : mat-typography-level(6rem, 1, 300), $display-3 : mat-typography-level(3.75rem, 1, 300), $display-2 : mat-typography-level(3rem, 1.04, 400), $display-1 : mat-typography-level(2.125rem, 1.17, 400), $headline : mat-typography-level(1.5rem, 1.33, 400), $title : mat-typography-level(1.25rem, 1.6, 500), $subheading-2 : mat-typography-level(1rem, 1.75, 400), $subheading-1 : mat-typography-level(.875rem, 1.57, 500), $body-2 : mat-typography-level(0.875rem, 1.71429, 500), $body-1 : mat-typography-level(0.875rem, 1.46429, 400), $caption : mat-typography-level(.75rem, 1.35, 400), $button : mat-typography-level(0.875rem, 1, 500), $input : mat-typography-level(inherit, 1.125, 400));
+@import './margins';
+
+// Custom Typography Sizes & Weights
+$custom-typography: mat-typography-config( 
+    $font-family: '"Open Sans", Arial, Helvetica, sans-serif;', 
+    $display-4 : mat-typography-level(6rem, 1, 300), 
+    $display-3 : mat-typography-level(3.75rem, 1, 300), 
+    $display-2 : mat-typography-level(3rem, 1.04, 400), 
+    $display-1 : mat-typography-level(2.125rem, 1.17, 400), 
+    $headline : mat-typography-level(1.5rem, 1.33, 400), 
+    $title : mat-typography-level(1.25rem, 1.6, 500), 
+    $subheading-2 : mat-typography-level(1rem, 1.75, 400), 
+    $subheading-1 : mat-typography-level(.875rem, 1.57, 500), 
+    $body-2 : mat-typography-level(0.875rem, 1.71429, 500), 
+    $body-1 : mat-typography-level(0.875rem, 1.46429, 400), 
+    $caption : mat-typography-level(.75rem, 1.35, 400), 
+    $button : mat-typography-level(0.875rem, 1, 500), 
+    $input : mat-typography-level(inherit, 1.125, 400)
+);
+
+/* 
+** Include the Material base styles
+**
+** NOTE: material theme will use our PX Blue custom typography
+** There is currently not a way to specify different custom fonts for different themes
+*/ 
 @include mat-core($custom-typography);
-$app-primary: mat-palette($pxb-blue);
-$app-accent : mat-palette($pxb-blue, 200);
-$app-warn: mat-palette($pxb-red, A700);
-$app-theme : mat-light-theme($app-primary, $app-accent, $app-warn);
-@include angular-material-theme($app-theme);
-.eaton {
-    @include angular-material-theme($app-theme);
-    .mat-card {
-        background-color: white;
-    }
-    body {
-        margin: 0 !important;
-    }
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    p {
-        margin-bottom: .5em !important;
-    }
+
+
+/* FUTURE: material should be the default theme (without a class required). .pxb-blue class should wrap the blue
+theme and be required on a top level element to apply the theme. This will be a breaking change for existing users
+and will need to be documented and released as a new major version.
+*/
+
+// Material default theme colors
+$material-theme-primary: mat-palette($mat-indigo, 700, 300, 900);
+$material-theme-accent: mat-palette($mat-light-blue);
+$material-theme-warn: mat-palette($mat-deep-orange, A200);
+$material-theme: mat-light-theme($material-theme-primary, $material-theme-accent, $material-theme-warn);
+.material-default{
+    @include angular-material-theme($material-theme);
 }
 
-$dark-primary: mat-palette($pxb-black, 700);
-$dark-accent : mat-palette($pxb-blue, 500);
-$dark-warn: mat-palette($pxb-red, A700);
-$dark-theme : mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
-.dark-theme {
-    @include angular-material-theme($dark-theme);
-    background-color: #333d43;
-}
-
-$red-primary: mat-palette($pxb-red, 500);
-$red-accent: mat-palette($pxb-black, 500);
-$red-warn: mat-palette($pxb-red, A700);
-$red-theme: mat-light-theme($red-primary, $red-accent, $red-warn);
-.red-theme {
-    @include angular-material-theme($red-theme);
-    .mat-card {
-        background-color: white;
+// Blue Theme
+$pxb-blue-primary: mat-palette($pxb-blue);
+$pxb-blue-accent : mat-palette($pxb-lightBlue, 500);
+$pxb-blue-warn: mat-palette($pxb-red, A700);
+$pxb-blue-theme : mat-light-theme($pxb-blue-primary, $pxb-blue-accent, $pxb-blue-warn);
+// .pxb-blue{
+    @include angular-material-theme($pxb-blue-theme);
+    @include reasonable-margins();
+    body { // this body tag should be removed when the .pxb-blue class rule is restored (see FUTURE above)
+        @include bodyfont();
     }
+// }
+
+// Blue Dark Theme
+$pxb-blue-dark-primary: mat-palette($pxb-black, 700);
+$pxb-blue-dark-accent : mat-palette($pxb-blue, 500);
+$pxb-blue-dark-warn: mat-palette($pxb-red, A700);
+$pxb-blue-dark-theme : mat-dark-theme($pxb-blue-dark-primary, $pxb-blue-dark-accent, $pxb-blue-dark-warn);
+.pxb-blue-dark{
+    @include angular-material-theme($pxb-blue-dark-theme);
+    @include reasonable-margins();
+    @include bodyfont();
+    // background-color: #333d43;
 }
 
-$dark-theme-red : mat-dark-theme($dark-primary, $red-primary, $dark-warn);
-.dark-theme-red {
-    @include angular-material-theme($dark-theme-red);
-    background-color: #333d43;
+// Red Theme
+$pxb-red-primary: mat-palette($pxb-red);
+$pxb-red-accent : mat-palette($pxb-black, 500);
+$pxb-red-warn: mat-palette($pxb-red, A700);
+$pxb-red-theme : mat-light-theme($pxb-red-primary, $pxb-red-accent, $pxb-red-warn);
+.pxb-red{
+    @include angular-material-theme($pxb-red-theme);
+    @include reasonable-margins();
+    @include bodyfont();
+}
+
+// Red Dark Theme
+$pxb-red-dark-primary: mat-palette($pxb-black, 700);
+$pxb-red-dark-accent : mat-palette($pxb-red, 500);
+$pxb-red-dark-warn: mat-palette($pxb-red, A700);
+$pxb-red-dark-theme : mat-dark-theme($pxb-red-dark-primary, $pxb-red-dark-accent, $pxb-red-dark-warn);
+.pxb-red-dark{
+    @include angular-material-theme($pxb-red-dark-theme);
+    @include reasonable-margins();
+    @include bodyfont();
+    // background-color: #333d43;
 }
