Removed unused style sheets and moved alarms into an object.

--- a/src/app/demo/alarms/alarms.component.scss
+++ b/src/app/demo/alarms/alarms.component.scss
@@ -1,6 +1,6 @@
 @import '../title/title.component.scss';
 
-::ng-deep #drawer-container {
+#drawer-container {
     height: calc(100% - #{$topBarHeight});
 }
 .accordion {
