--- a/src/app/demo/alarms/alarms.component.html
+++ b/src/app/demo/alarms/alarms.component.html
@@ -2,81 +2,42 @@
  <mat-drawer-container id="drawer-container">
      <mat-drawer-content>
          <div style="min-width:200px">
-         <mat-accordion [multi]="true" [displayMode]="'flat'">
-            <div class="accordion">
-             <mat-expansion-panel [expanded]="true">
-                 <mat-expansion-panel-header>
-                     <mat-panel-title>Today</mat-panel-title>
-                 </mat-expansion-panel-header>
-                 <mat-divider></mat-divider>
-                 <mat-list>
-                     <mat-list-item>
-                         <mat-checkbox matListIcon style="height:unset"></mat-checkbox>
-                         <h3 matLine>Lighting - PDU 200</h3>
-                         <p matLine>Eaton</p>
-                         <button mat-stroked-button color="primary" style="min-width:unset">ACKNOWLEDGE</button>
-                     </mat-list-item>
-                     <mat-list-item>
-                         <mat-checkbox matListIcon style="height:unset"></mat-checkbox>
-                         <h3 matLine>UPS 5400</h3>
-                         <p matLine>Eaton</p>
-                         <button mat-stroked-button color="primary" style="min-width:unset">ACKNOWLEDGE</button>
-                     </mat-list-item>
-                 </mat-list>
-             </mat-expansion-panel>
+            <mat-accordion [multi]="true" [displayMode]="'flat'">
+                <div class="accordion">
+                    <mat-expansion-panel *ngFor="let day of alarmHistory" [expanded]="true">
+                        <mat-expansion-panel-header>
+                            <mat-panel-title>{{day.time}}</mat-panel-title>
+                        </mat-expansion-panel-header>
+                        <mat-divider></mat-divider>
+                        <mat-list>
+                            <mat-list-item *ngFor="let device of day.devices">
+                                <mat-checkbox matListIcon style="height:unset"></mat-checkbox>
+                                <h3 matLine>{{device.name}}</h3>
+                                <p matLine>{{device.manufacturer}}</p>
+                                <button mat-stroked-button color="primary" style="min-width:unset">ACKNOWLEDGE</button>
+                            </mat-list-item>
+                        </mat-list>
+                    </mat-expansion-panel>
+                </div>
+             </mat-accordion>
+        </div>
+    </mat-drawer-content>
 
-             <mat-expansion-panel [expanded]="true">
-                 <mat-expansion-panel-header>
-                     <mat-panel-title>Past Week</mat-panel-title>
-                 </mat-expansion-panel-header>
-                 <mat-divider></mat-divider>
-                 <mat-list>
-                     <mat-list-item>
-                         <mat-checkbox matListIcon style="height:unset"></mat-checkbox>
-                         <h3 matLine>Lighting - PDU 400</h3>
-                         <p matLine>Ephesus</p>
-                         <button mat-stroked-button color="primary" style="min-width:unset">ACKNOWLEDGE</button>
-                     </mat-list-item>
-                     <mat-list-item>
-                         <mat-checkbox matListIcon style="height:unset"></mat-checkbox>
-                         <h3 matLine>UPS 5400</h3>
-                         <p matLine>Eaton</p>
-                         <button mat-stroked-button color="primary" style="min-width:unset">ACKNOWLEDGE</button>
-                     </mat-list-item>
-                 </mat-list>
-             </mat-expansion-panel>
-
-             <mat-expansion-panel [expanded]="true">
-                 <mat-expansion-panel-header>
-                     <mat-panel-title>Last 30 Days</mat-panel-title>
-                 </mat-expansion-panel-header>
-                 <mat-divider></mat-divider>
-                 <mat-list>
-                     <mat-list-item>
-                         <mat-checkbox matListIcon style="height:unset"></mat-checkbox>
-                         <h3 matLine>Generator 200</h3>
-                         <p matLine>Eaton</p>
-                         <button mat-stroked-button color="primary" style="min-width:unset">ACKNOWLEDGE</button>
-                     </mat-list-item>
-                 </mat-list>
-             </mat-expansion-panel>
-            </div>
-         </mat-accordion>
-         </div>
-     </mat-drawer-content>
      <mat-drawer mode="side" position="end" opened>
          <div style="width:325px">
-             <mat-list id="right-list">
+             <mat-toolbar>
                  <mat-list-item>
-                     <h3 matLine>Lighting - PDU 100</h3>
-                     <p matLine>Device 360</p>
+                     <h3>Lighting - PDU 100</h3>
+                     <p>Device 360</p>
                  </mat-list-item>
-                 <mat-divider></mat-divider>
+             </mat-toolbar>
+             <mat-divider></mat-divider>
+             <mat-list>
                  <ng-container *ngFor="let item of sideDrawerContent">
                      <mat-list-item>
                          <div class="list-item-detail">
-                             <span class="detail1">{{item.data1}}</span>
-                             <span class="detail2" [style.color]="getColor(item.data2)">{{item.data2}}</span>
+                             <span>{{item.data1}}</span>
+                             <span [style.color]="getColor(item.data2)">{{item.data2}}</span>
                          </div>
                      </mat-list-item>
                      <mat-divider></mat-divider>
