Made the banner close on anywhere click.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,19 +8,22 @@
     </div>
 </app-sidenav>
 
-<div class="notice" *ngIf="showNotice">
-    <div fxLayout="row" fxLayoutAlign="end" style="margin-top:10px; margin-bottom:55px">
-        <button mat-icon-button (click)="showNotice=false">
-            <mat-icon>close</mat-icon>
-        </button>
+<div class="overlay" (click)="showNotice=false" *ngIf="showNotice">
+    <div class="notice">
+        <div fxLayout="row" fxLayoutAlign="end" style="margin-top:10px; margin-bottom:55px">
+            <button mat-icon-button (click)="showNotice=false">
+                <mat-icon>close</mat-icon>
+            </button>
+        </div>
+        <h1>
+            THEME DEMO ONLY
+        </h1>
+        <p>
+            This example is intended to demonstrate the effects of different PX Blue themes on various components.
+            The data, icons, behaviors, etc. are not representative of a production application and many areas of
+            the demo are non-functional/non-interactive.
+        </p>
     </div>
-    <h1>
-        THEME DEMO ONLY
-    </h1>
-    <p>
-        This example is intended to demonstrate the effects of different PX Blue themes on various components.
-        The data, icons, behaviors, etc. are not representative of a production application and many areas of
-        the demo are non-functional/non-interactive.
-    </p>
 </div>
+
 
