--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -28,3 +28,12 @@
     text-align: center;
     background-color: #007bc1F5;
 }
+
+.overlay {
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    z-index: 10000;
+}
