Fixed the theme toggling.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
         <button mat-fab class="fab fab1" color="primary" (click)="toggleTheme()">
             <i class="material-icons">flip_to_back</i>  toggle theme
         </button>
-        <button mat-stroked-button class="fab fab2" color="link">Blue Dark Theme</button>
+        <button mat-stroked-button class="fab fab2" color="link">{{userFacingThemeName}}</button>
     </div>
 </app-sidenav>
 
