Disabled tab change animation.

--- a/src/app/demo/devices/devices.component.html
+++ b/src/app/demo/devices/devices.component.html
@@ -1,5 +1,5 @@
 <app-title></app-title>
-<mat-tab-group>
+<mat-tab-group [@.disabled]="true">
     <mat-tab label="Overview">
         <app-overview></app-overview>
     </mat-tab>
