--- a/src/app/demo/alarms/alarms.component.html
+++ b/src/app/demo/alarms/alarms.component.html
@@ -5,7 +5,7 @@
             <mat-accordion [multi]="true" [displayMode]="'flat'">
                 <div class="accordion">
                     <mat-expansion-panel *ngFor="let day of alarmHistory" [expanded]="true">
-                        <mat-expansion-panel-header>
+                        <mat-expansion-panel-header [expandedHeight]="'48px'" [collapsedHeight]="'48px'">
                             <mat-panel-title>{{day.time}}</mat-panel-title>
                         </mat-expansion-panel-header>
                         <mat-divider></mat-divider>
