Removed hard-coded heights from the top bar.

--- a/src/app/demo/alarms/alarms.component.html
+++ b/src/app/demo/alarms/alarms.component.html
@@ -1,5 +1,7 @@
-<app-title></app-title>
- <mat-drawer-container id="drawer-container">
+
+<div class="page-container">
+    <app-title></app-title>
+    <mat-drawer-container class="drawer-container">
      <mat-drawer-content>
          <div style="min-width:200px">
             <mat-accordion [multi]="true" [displayMode]="'flat'">
@@ -45,4 +47,5 @@
             </mat-list>
          </div>
      </mat-drawer>
- </mat-drawer-container>
+    </mat-drawer-container>
+</div>
