--- a/src/app/demo/title/title.component.html
+++ b/src/app/demo/title/title.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" id="topBar">
+<mat-toolbar color="primary">
     <button fxShow.gt-xs="false" type="button" aria-label="Toggle sidenav" mat-icon-button (click)="onMenuClicked()"
             style="margin-left:-4px; margin-right: 12px">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
