Removed the Break from the login dialog.

--- a/src/app/demo/login-dialog/login-dialog.component.html
+++ b/src/app/demo/login-dialog/login-dialog.component.html
@@ -2,18 +2,17 @@
 <div mat-dialog-content>
     <div class="container">
         <mat-icon color="primary" class="logo">person</mat-icon>
-        <form [formGroup]="loginForm">
+        <form [formGroup]="loginForm" [style.marginBottom.px]="10">
             <mat-form-field>
                 <input matInput placeholder="Email Address" formControlName="email" type="email" required>
             </mat-form-field>
             <mat-form-field>
                 <input matInput type="password" placeholder="Password" formControlName="password" required>
             </mat-form-field>
-            <div class="text-center mat-typography" fxLayout="row" fxLayoutAlign="space-between center" fxLayout="row-reverse" fxLayout.xs="column">
+            <div class="text-center mat-typography" fxLayoutAlign="space-between center" fxLayout="row-reverse" fxLayout.xs="column">
                 <button [disabled]="!loginForm.valid" mat-raised-button color="primary" class="login" (click)="login()">LOG IN</button>
                 <mat-checkbox class="text-center mat-typography" formControlName="remember">Remember Me</mat-checkbox>
             </div>
-            <br/>
         </form>
         <br/>
         <div fxLayout="row" fxLayoutAlign="center center">
@@ -22,9 +21,9 @@
         <div class="text-center mat-typography">
             <h4>
                 By logging in you agree to our
-                <br/>
-                <a class="links"href="">Terms and Conditions</a> and
-                <a class ="links"href="">Privacy Policy</a>
+                <br/>s
+                <a class="links" href="">Terms and Conditions</a> and
+                <a class ="links" href="">Privacy Policy</a>
             </h4>
         </div>
     </div>
