--- a/src/app/demo/sidenav/sidenav.component.html
+++ b/src/app/demo/sidenav/sidenav.component.html
@@ -22,8 +22,7 @@
                     <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
                 </button>
                 <div fxLayout="column">
-                    <span class="mat-subheading-2">PX Blue Themes Example</span>
-                    <span class="mat-subheading-1"> For display purposes only</span>
+                    <span class="mat-subheading-2" style="margin:unset;">PX Blue Themes Example</span>
                 </div>
             </mat-toolbar>
             <mat-divider></mat-divider>
