--- a/src/app/demo/devices/tabs/overview/overview.component.scss
+++ b/src/app/demo/devices/tabs/overview/overview.component.scss
@@ -1,9 +1,9 @@
-#overview-container {
+.overview-container {
     padding: 16px;
     min-width: 600px;
 }
 
-#overview-table {
+.overview-table {
     width: 100%;
     margin-top: 10px;
 }
