--- a/src/app/demo/dashboard/dashboard.component.html
+++ b/src/app/demo/dashboard/dashboard.component.html
@@ -17,7 +17,7 @@
                       <battery-progress  [style.color]="interpretColor(device.battery)"  percent="{{device.battery}}" size="36" primary></battery-progress>
                     </pxb-hero>
                 </pxb-hero-banner>
-                  <mat-list-item *ngFor="let list of device.channels">
+                  <mat-list-item *ngFor="let list of device.channels; let last=last">
                       <div style="width: 100%; display:flex; justify-content: space-between">
                         <mat-icon>{{list.icon}}</mat-icon>
                         <span class="list-label" style="margin-bottom:0">{{list.label}}</span>
@@ -25,6 +25,7 @@
                           <pxb-channel-value value="{{list.value}}" units="{{list.unit}}"></pxb-channel-value>
                     </div>
                   </div>
+                  <mat-divider *ngIf="!last"></mat-divider>
                  </mat-list-item>
               </mat-list>
           </mat-card>
