Code review changes

--- a/angular/src/app/demo/alarms/alarms.component.html
+++ b/angular/src/app/demo/alarms/alarms.component.html
@@ -27,10 +27,10 @@
 
      <mat-drawer mode="side" position="end" opened>
          <div style="width:325px">
-             <mat-toolbar>
-                 <mat-list-item>
-                     <h3>Lighting - PDU 100</h3>
-                     <p>Device 360</p>
+             <mat-toolbar style="background-color:transparent">
+                 <mat-list-item >
+                     <div class="mat-subheading-2" style="margin-bottom:2px">Lighting - PDU 100</div>
+                     <div class="mat-body-2" style="line-height:.6rem">Device 360</div>
                  </mat-list-item>
              </mat-toolbar>
              <mat-divider></mat-divider>
