--- a/angular/themes/theme.scss
+++ b/angular/themes/theme.scss
@@ -6,37 +6,37 @@ All rights reserved.
 This code is licensed under the BSD-3 license found in the LICENSE file in the root directory of this source tree and at https://opensource.org/licenses/BSD-3-Clause.
 **/
 
-@import '~@angular/material/_theming.scss';
-@import '~@pxblue/colors/palette.scss';
-@import './margins';
-@import './fonts';
-@import './darkTheme';
-@import './blueTheme';
+@import '../node_modules/@angular/material/theming';
+@import '../node_modules/@pxblue/colors/palette';
+@import 'margins';
+@import 'fonts';
+@import 'darkTheme';
+@import 'blueTheme';
 
 // Custom Typography Sizes & Weights
-$custom-typography: mat-typography-config( 
-    $font-family: '"Open Sans", Arial, Helvetica, sans-serif;', 
-    $display-4 : mat-typography-level(6rem, 1, 300), 
-    $display-3 : mat-typography-level(3.75rem, 1, 300), 
-    $display-2 : mat-typography-level(3rem, 1.04, 400), 
-    $display-1 : mat-typography-level(2.125rem, 1.17, 400), 
-    $headline : mat-typography-level(1.5rem, 1.33, 400), 
-    $title : mat-typography-level(1.25rem, 1.6, 500), 
-    $subheading-2 : mat-typography-level(1rem, 1.75, 400), 
-    $subheading-1 : mat-typography-level(.875rem, 1.57, 500), 
-    $body-2 : mat-typography-level(0.875rem, 1.71429, 500), 
-    $body-1 : mat-typography-level(0.875rem, 1.46429, 400), 
-    $caption : mat-typography-level(.75rem, 1.35, 400), 
-    $button : mat-typography-level(0.875rem, 1, 500), 
+$custom-typography: mat-typography-config(
+    $font-family: '"Open Sans", Arial, Helvetica, sans-serif;',
+    $display-4 : mat-typography-level(6rem, 1, 300),
+    $display-3 : mat-typography-level(3.75rem, 1, 300),
+    $display-2 : mat-typography-level(3rem, 1.04, 400),
+    $display-1 : mat-typography-level(2.125rem, 1.17, 400),
+    $headline : mat-typography-level(1.5rem, 1.33, 400),
+    $title : mat-typography-level(1.25rem, 1.6, 500),
+    $subheading-2 : mat-typography-level(1rem, 1.75, 400),
+    $subheading-1 : mat-typography-level(.875rem, 1.57, 500),
+    $body-2 : mat-typography-level(0.875rem, 1.71429, 500),
+    $body-1 : mat-typography-level(0.875rem, 1.46429, 400),
+    $caption : mat-typography-level(.75rem, 1.35, 400),
+    $button : mat-typography-level(0.875rem, 1, 500),
     $input : mat-typography-level(inherit, 1.125, 400)
 );
 
-/* 
+/*
 ** Include the Material base styles
 **
 ** NOTE: material theme will use our PX Blue custom typography
 ** There is currently not a way to specify different custom fonts for different themes
-*/ 
+*/
 @include mat-core($custom-typography);
 
 
@@ -70,5 +70,5 @@ $pxb-blue-dark-theme : mat-dark-theme($pxb-blue-dark-primary, $pxb-blue-dark-acc
     @include reasonable-margins();
     @include bodyfont();
     @include darktheme($pxb-blue-dark-primary, $pxb-blue-dark-accent);
-  
+
 }
