--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -4,25 +4,27 @@
         <button mat-fab class="fab fab1" color="primary" (click)="toggleTheme()">
             <i class="material-icons">flip_to_back</i>  toggle theme
         </button>
-        <button mat-chip class="fab fab2">{{userFacingThemeName}}</button>
+        <button mat-chip class="fab fab2">{{currentTheme.themeName}}</button>
     </div>
 </app-sidenav>
 
 <div class="overlay" (click)="showNotice=false" *ngIf="showNotice">
     <div class="notice">
-        <div fxLayout="row" fxLayoutAlign="end" style="margin-top:10px; margin-bottom:55px">
+        <div fxLayout="row" fxLayoutAlign="end" class="x">
             <button mat-icon-button (click)="showNotice=false">
                 <mat-icon>close</mat-icon>
             </button>
         </div>
-        <h1>
-            THEME DEMO ONLY
-        </h1>
-        <p>
-            This example is intended to demonstrate the effects of different PX Blue themes on various components.
-            The data, icons, behaviors, etc. are not representative of a production application and many areas of
-            the demo are non-functional/non-interactive.
-        </p>
+        <div class="notice-content">
+            <h1>
+                THEME DEMO ONLY
+            </h1>
+            <p>
+                This example is intended to demonstrate the effects of different PX Blue themes on various components.
+                The data, icons, behaviors, etc. are not representative of a production application and many areas of
+                the demo are non-functional/non-interactive.
+            </p>
+        </div>
     </div>
 </div>
 
