--- a/angular/src/app/app.component.scss
+++ b/angular/src/app/app.component.scss
@@ -1,7 +1,7 @@
 .fab {
     width: 200px;
-    height: 54px;
-    border-radius: 3px;
+    height: 55px;
+    border-radius: 5px;
     position: fixed;
     right: 30px;
     z-index:2;
@@ -19,16 +19,40 @@
     pointer-events: none;
 }
 
+@keyframes slideIn {
+    0% {
+        transform: translate(-100%, -50%);
+    }
+    70% {
+        transform: translate(10%, -50%);
+    }
+    100% {
+        transform: translate(0%, -50%);
+    }
+};
+@import "~@pxblue/colors/palette.scss";
+
 .notice {
-    top: 30%;
-    width:98%;
-    left: 0;
-    color: #eef0f0;
-    padding: 0 1% 75px 1%;
-    z-index: 10000;
-    position: fixed;
+    color: map-get($pxb-white, 500);
+    background-color: map-get($pxb-blue, 500);
     text-align: center;
-    background-color: #007bc1F5;
+    position: fixed;
+    z-index: 10000;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    transform: translate(-100%, -50%);
+    animation: slideIn 1200ms ease-in-out 1000ms;
+    animation-fill-mode: forwards;
+    box-sizing: border-box;
+    .x {
+        margin-top:10px;
+        margin-bottom:15px;
+        margin-right: 10px;
+    }
+    .notice-content {
+        padding: 0 75px 25px 75px;
+    }
 }
 
 .overlay {
