--- a/angular/src/app/demo/dashboard/dashboard.component.scss
+++ b/angular/src/app/demo/dashboard/dashboard.component.scss
@@ -6,7 +6,6 @@ mat-list {
 
 .mat-list-base .mat-list-item{
   color: inherit;
-  height: 48px;
 }
 
 .list-label{
@@ -22,7 +21,7 @@ mat-list {
 .mat-card {
     width: 100%;
     overflow: hidden;
-    height: 100%,
+    height: 100%;
 }
 
 .padding0{
