--- a/angular/src/app/demo/title/title.component.html
+++ b/angular/src/app/demo/title/title.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
     <button fxShow.gt-xs="false" type="button" aria-label="Toggle sidenav" mat-icon-button (click)="onMenuClicked()"
-            style="margin-left:-4px; margin-right: 12px">
+            style="margin-left:0; margin-right: 10px">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
     </button>
     <div fxLayout="row" fxLayoutAlign="space-between center" style="width:100%">
