--- a/angular/src/app/demo/sidenav/sidenav.component.scss
+++ b/angular/src/app/demo/sidenav/sidenav.component.scss
@@ -2,20 +2,19 @@
     height: 100%;
     width: 100%;
 }
-
 .sidenav{
     max-width: 90%;
     transition: width 200ms cubic-bezier(0.4, 0.0, 0.2, 1);
     &.mobile{
-        width: 0px;
+        width: 0px !important;
         &.open{
-            width: 350px;
+            width: 350px !important;
         }
     }
     &:not(.mobile){
-        width: 64px;
+        width: 64px !important;
         &.open{
-            width: 350px;
+            width: 350px !important;
         }
         .mat-list-item{
             white-space: nowrap;
@@ -26,12 +25,12 @@
 .nav-content{
     transition: margin 200ms cubic-bezier(0.4, 0.0, 0.2, 1);
     &.mobile{
-        margin-left: auto;
+        margin-left: auto !important;
     }
     &:not(.mobile){
-        margin-left: 64px;
+        margin-left: 64px !important;
         &.open{
-            margin-left: 350px;
+            margin-left: 350px !important;
         }
     }
 }
@@ -77,3 +76,5 @@ section{
     background-color: #e0eff8;
     border-radius: 0px 24px 24px 0px;
 }
+
+/* PXB THEME OVERRIDES BELOW THIS LINE */
