Moved app into demo folder.

--- a/angular/demo/src/app/app.component.html
+++ b/angular/demo/src/app/app.component.html
@@ -10,7 +10,7 @@
 
 <div class="overlay" (click)="showNotice=false" *ngIf="showNotice">
     <div class="notice">
-        <div fxLayout="row" fxLayoutAlign="end" class="x">
+        <div fxLayout="row" fxLayoutAlign="end" class="x" style="height:0">
             <button mat-icon-button (click)="showNotice=false">
                 <mat-icon>close</mat-icon>
             </button>
